--- a/styles.css
+++ b/styles.css
@@ -74,11 +74,15 @@ header .sub {
 }
 
 .xpay-section {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding: 32px 16px;
   background: #eee;
   margin-top: 40px;
   border-top: 1px solid #bbb;
+  text-align: center;
 }
 
 .xpay-section h2 {
